# AMLVM

./: Cargo.toml  Makefile  README.md  footer.html  terminate.sh
imagenet/: Cargo.toml
imagenet/src/: lib.rs
kmeans/: Cargo.toml
kmeans/src/: lib.rs
node/: app.js  custom.css  footer.html  header.html  index.html  kc.html  ml.html  myscripts.js
rkm/src/: lib.rs  parallel.rs  serial.rs
src/: lib.rs  recognition_lib.rs
