[package]
name = "AMLVM"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "AMLVM"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
kmeans = { path = "kmeans" }
imagenet = { path = "imagenet" }

[workspace]
members = [
    "imagenet",
    "kmeans",
]
