[package]
name = "imagenet"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
tract-tensorflow = "0.6.3"
