[package]
name = "kmeans"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"
rkm = { path = "../rkm" }
ndarray = { version = "0.13.0", features = ["serde"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.3"
tera = "1.2.0"
